# hs-nnet

./: .gitignore  LICENSE  README.md  addLayer.htm  blast-matrix.cabal  cabal.project  hie.yaml  stack.yaml
.github/workflows/: haskell.yml
benchmarks/: Benchmarks.hs
examples/mnist_dcgan/: Main.hs
include/: clblashs.h  openclhs.h
src/Data/: BlasM.hs
src/Data/Matrix/: CLBlas.hsc  CLBlasM.hs  CLBlast.hsc  OpenCL.hsc
src/ML/: NNet.hs
src/ML/NNet/: ClipGrad.hs  Convolve.hs  DebugLayer.hs  Deconvolve.hs  Dropout.hs  FullyConnectedSGD.hs  LayerBias.hs  LeakyRelu.hs  Norm.hs  Relu.hs  Reshape.hs  Sigmoid.hs  Tanh.hs
src/ML/NNet/GradientMod/: Adam.hs  ClipWeights.hs  Demon.hs  Momentum.hs  RMSProp.hs  Rate.hs
src/ML/NNet/Init/: RandomFun.hs
test/Data/Matrix/: CLBlasMSpec.hs  OpenCLSpec.hs
test/ML/: NNetSpec.hs
test/ML/NNet/: FullyConnectedSGDSpec.hs  LeakyReluSpec.hs  ReluSpec.hs
