name:                blast-matrix
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/jmdurr/hs-nnet#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Durr
maintainer:          jmdurr@gmail.com
copyright:           2020 Jonathan Durr
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  ghc-options: -Wall
  exposed-modules:     Data.Matrix.OpenCL,
                       Data.BlasM,
                       ML.NNet,
                       ML.NNet.FullyConnectedSGD,
                       ML.NNet.Relu,
                       ML.NNet.LeakyRelu,
                       ML.NNet.Reshape,
                       ML.NNet.Sigmoid,
                       ML.NNet.Init.RandomFun,
                       ML.NNet.Tanh,
                       ML.NNet.Dropout,
                       ML.NNet.Convolve,
                       ML.NNet.Deconvolve,
                       ML.NNet.DebugLayer,
                       ML.NNet.LayerBias,
                       ML.NNet.GradientMod.RMSProp,
                       ML.NNet.GradientMod.Momentum,
                       ML.NNet.GradientMod.Adam,
                       ML.NNet.GradientMod.Rate,
                       ML.NNet.GradientMod.Demon,
                       ML.NNet.GradientMod.ClipWeights,
                       Data.Matrix.CLBlasM
                       
  build-depends:       base,
                       mtl,
                       vector,
                       containers,
                       bytestring,
                       random,
                       formatting,
                       text,
                       language-c-quote,
                       mainland-pretty,
                       normaldistribution,
                       cereal,
                       deepseq,
                       cereal-vector

  default-language:    Haskell2010
  extra-libraries:     OpenCL


executable mnist_dcgan
  hs-source-dirs: examples/mnist_dcgan
  build-depends: base
               , blast-matrix
               , random
               , vector
               , bytestring
               , cereal
               , random
               , JuicyPixels
               , text
               , mtl
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options: -O2 -threaded -rtsopts -with-rtsopts=-N
  
                         
test-suite spec
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: 
                 Data.Matrix.OpenCLSpec,
                 Data.Matrix.CLBlasMSpec,
                 ML.NNet.FullyConnectedSGDSpec,
                 ML.NNet.ReluSpec,
                 ML.NNet.LeakyReluSpec,
                 ML.NNetSpec
  build-tools: hspec-discover
  build-depends: hspec
               , hspec-discover
               , base
               , blast-matrix
               , random
               , vector
  default-language:    Haskell2010
  extra-libraries:     OpenCL

benchmark blast-matrix-benchmarks
  build-depends: base
               , criterion
               , QuickCheck
               , blast-matrix
               , mtl
               , vector
  ghc-options: -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: benchmarks
  main-is: Benchmarks.hs
  type: exitcode-stdio-1.0
  default-language: Haskell2010
source-repository head
  type:     git
  location: https://github.com/jmdurr/hs-nnet
